fix: imports and test jvm args